--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto wow bounceInDown"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
+      <h1 class="logo me-auto wow pulse" data-wow-iteration="infinite" data-wow-duration="1500ms"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
       <nav id="navbar" class="navbar order-last order-lg-0 wow slideInRight">
         <ul>
           <li><a class="nav-link scrollto active" href="#welcome">Home</a></li>
@@ -58,7 +58,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Welcome Section ======= -->
-  <section id="welcome" class="d-flex align-items-center">
+  <section id="welcome" class="d-flex align-items-center wow fadeInDown">
     <div class="container wow slideInLeft">
       <h1 class="title">Welcome<span> to RITM-APPS</span></h1>
       <h4>Republic of the Philippines</h4>
@@ -76,8 +76,8 @@
   <footer id="footer">
     <div class="container py-4">
       <div class="text-center">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Research Institute for Tropical Medicine</span></strong>. All Rights Reserved
+        <div class="copyright wow fadeInUp">
+          &copy; Copyright <strong><span> Research Institute for Tropical Medicine</span></strong>. All Rights Reserved
         </div>
       </div>
     </div>
