--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <!-- <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="assets/css/libs/animate.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
@@ -27,30 +27,16 @@
 </head>
 
 <body>
-
-  <!-- ======= Top Bar ======= -->
-  <div id="topbar" class="d-flex align-items-center fixed-top">
-    <div class="container d-flex justify-content-between">
-      <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">contact@example.com</a>
-        <i class="bi bi-phone"></i> +63 1234 56789
-      </div>
-      <div class="d-none d-lg-flex social-links align-items-center">
-        <a href="https://facebook.com/RITMPH/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-link-45deg"></i></a>
-      </div>
-    </div>
-  </div>
-
+  
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto wow pulse" data-wow-iteration="infinite" data-wow-duration="1500ms"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
-      <nav id="navbar" class="navbar order-last order-lg-0 wow slideInRight">
+      <!-- data-wow-iteration="infinite" data-wow-duration="1500ms" -->
+      <h1 class="logo me-auto" data-aos="fade-right" data-aos-offset="900" data-aos-duration="900"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
+      <nav id="navbar" class="navbar order-last order-lg-0" data-aos="fade-left" data-aos-offset="900" data-aos-duration="900">
         <ul>
           <li><a class="nav-link scrollto active" href="#welcome">Home</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#appointment">Services</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -58,18 +44,133 @@
   </header><!-- End Header -->
 
   <!-- ======= Welcome Section ======= -->
-  <section id="welcome" class="d-flex align-items-center wow fadeInDown">
+  <section id="welcome" class="d-flex align-items-center" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
     <div class="container wow slideInLeft">
       <h1 class="title">Welcome<span> to RITM-APPS</span></h1>
-      <h4>Republic of the Philippines</h4>
+      <h4>Department of Health</h4>
       <h2>Research Institute for Tropical Medicine</h2>
-      <h5>Department of Health</h5>
-      <button class="btn-1">Make an Appointment</button>
+      <a href="#appointment"><button class="btn-1">Make an Appointment</button></a> 
     </div>
   </section><!-- End Welcome -->
 
   <main id="main">
-    
+    <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="why-us">
+      <div class="container mb-5 pb-5">
+        <div class="row">
+          <div class="col-lg-4 d-flex align-items-stretch mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+            <div class="content">
+              <h3>Why Choose RITM?</h3>
+              <p>
+                RITM strongly believes that the goal to control and eliminate infectious and tropical diseases requires the efforts of the whole nation. 
+                Empowerment of more individuals brings us closer to this goal.
+              </p>
+              <p>
+                <span class="bi bi-chevron-double-right"></span> <b>VISION</b><br>
+                <small>Locally and internationally recognized leading institution for research, training, clinical and diagnostic services, and biologicals production in infectious disease by 2022.</small>
+
+                <span class="bi bi-chevron-double-right"></span> <b>MISSION</b><br>
+                <small>Protect Filipinos against infectious diseases through the conduct of globally competitive research, training, clinical and diagnostic services and production of biologicals.</small>
+              </p>
+              <div class="text-center">
+                <a href="https://ritm.gov.ph/" target="_blank" class="more-btn">Learn More <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8 d-flex align-items-stretch" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <img src="assets/img/patient.gif">
+                    <h4>OUTPATIENT SERVICES</h4>
+                    <hr class="mt-0 mb-2">
+                    <p>
+                      True to the mandate of the Research Institute for Tropical Medicine, the Clinical Research Division (CRD) serves to link the 
+                      institute to the patients and other stakeholders in need of its clinical expertise.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <img src="assets/img/hospital.gif">
+                    <h4>HOSPITAL SERVICES</h4>
+                    <hr class="mt-0 mb-2">
+                    <p>
+                      RITM's Clinical Research Division (CRD) provides clinical care to patients suffering from communicable diseases, and is run 
+                      by infectious disease healthcare experts.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <img src="assets/img/microscope.gif">
+                    <h4>LABORATORY SERVICES</h4>
+                    <hr class="mt-0 mb-2">
+                    <p>The Laboratory Research Division (LRD) is one of 4 divisions of the Research Institute for Tropical Medicine.</p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+      </div>
+    </section><!-- End Why Us Section -->
+
+    <!-- ======= Appointment Section ======= -->
+    <section id="appointment" class="appointment" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+      <div class="container">
+        <div class="appointment-img text-center">
+          <img src="assets/img/calendar.gif">
+          <h4>ONLINE APPOINTMENT</h4>
+          <div class="spacer"></div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6" data-aos="fade-right">
+            <div class="appointment-box">
+              <h4>COVID-19 TESTING</h4>
+              <img src="assets/img/covid.png" alt="">
+
+              <div class="appointment-links">
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+              <div class="appointment-info">
+                <p>Sample Description</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="appointment-box">
+              <h4>FACE-TO-FACE</h4>
+              <img src="assets/img/Medical prescription-bro.png" alt="">
+
+              <div class="appointment-links">
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+              <div class="appointment-info">
+                <p>Sample Description</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-left">
+            <div class="appointment-box">
+              <h4>TELECONSULT</h4>
+              <img src="assets/img/Online Doctor-pana.png" alt="">
+              
+              <div class="appointment-links">
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+              <div class="appointment-info">
+                <p>Sample Description</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- End Appointment Section -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -89,10 +190,12 @@
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/dist/wow.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
     new WOW().init();
+    AOS.init();
   </script>
 
 </body>
