--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
               <div class="appointment-info">
+                <div class="spacer"></div>
                 <p>Sample Description</p>
               </div>
             </div>
@@ -148,6 +149,7 @@
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
               <div class="appointment-info">
+                <div class="spacer"></div>
                 <p>Sample Description</p>
               </div>
             </div>
@@ -161,6 +163,7 @@
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
               <div class="appointment-info">
+                <div class="spacer"></div>
                 <p>Sample Description</p>
               </div>
             </div>
