--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
       <!-- data-wow-iteration="infinite" data-wow-duration="1500ms" -->
-      <h1 class="logo me-auto" data-aos="fade-right" data-aos-offset="900" data-aos-duration="900"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
-      <nav id="navbar" class="navbar order-last order-lg-0" data-aos="fade-left" data-aos-offset="900" data-aos-duration="900">
+      <h1 class="logo me-auto"><a href="index.html">RITM<span style="color:#27ae60;">-APPS</span></a></h1>
+      <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#welcome">Home</a></li>
           <li><a class="nav-link scrollto" href="#appointment">Services</a></li>
