--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </div>
               <div class="appointment-info">
                 <div class="spacer"></div>
-                <p>Sample Description</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
               </div>
               <div class="appointment-info">
                 <div class="spacer"></div>
-                <p>Sample Description</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
               </div>
               <div class="appointment-info">
                 <div class="spacer"></div>
-                <p>Sample Description</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
