--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#welcome">Home</a></li>
-          <li><a class="nav-link scrollto" href="#appointment">Services</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -171,9 +171,54 @@
         </div>
       </div>
     </section>
-
-
     <!-- End Appointment Section -->
+
+    <!-- ======= Other Services Section ======= -->
+    <section id="services" class="services" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <div class="container text-center">
+        <img src="assets/img/book.gif">
+        <h4>OTHER SERVICES</h4>
+        <div class="spacer"></div>
+      </div>
+      <div class="container-fluid">
+        <div class="service-img">
+          <div class="row">
+            <div class="col-md-5 text-center bg" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
+              <img src="assets/img/NEQAS.png">
+            </div>
+            <div class="col-md-7" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
+              <div class="service-description">
+                <h5 class="mt-3">NATIONAL EXTERNAL QUALITY ASSESSMENT SCHEME (NEQAS)</h5>
+                <p>NEQAS evaluates the performance of participating laboratories by assessing the integrity of the entire testing from sample receipt to releasing of 
+                  test results. This would allow comparison of the laboratory's testing to the performance of a peer group and/or the national reference laboratory.
+                </p>
+                <p>The panels offered by the Research Institute for Tropical Medicine consist of a combination of positive and negative samples that are designed to mimic
+                   patient samples. Completed tests are then encoded online via Oneworld Accuracy System (OASYS), a cloud-based application developed by 1WA, and the data are 
+                   then analyzed under ISO13528. Performance reports are provided to the participants to assess their results and compare their performance 
+                   against their peer group.
+                </p>
+                <p>
+                  Participation in an EQAS program is required under local regulatory policies for a laboratory to operate.
+                </p>
+                <p>
+                  <b>Registration covers the following programs offered by the Research Institute for Tropical Medicine:</b><br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Bacteriology</b><br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Bacteriology</b><br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Mycobacteriology</b><br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Transfusion Transmissible Infections</b>
+                </p>
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+
+    <!-- End Other Services Section -->
+
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
