--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
       <div class="container-fluid">
         <div class="service-img">
           <div class="row">
-            <div class="col-md-5 text-center bg" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
+            <div class="col-md-5 mb-5 text-center bg" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
               <img src="assets/img/NEQAS.png">
             </div>
-            <div class="col-md-7" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
+            <div class="col-md-7 mb-5" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
               <div class="service-description">
                 <h5 class="mt-3">NATIONAL EXTERNAL QUALITY ASSESSMENT SCHEME (NEQAS)</h5>
                 <p>NEQAS evaluates the performance of participating laboratories by assessing the integrity of the entire testing from sample receipt to releasing of 
@@ -210,12 +210,32 @@
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
             </div>
+
+            <div class="col-md-7 mb-5">
+              <div class="service-description">
+                <h5 class="mt-3">EXTERNAL VISITORS PROGRAM MONITORING</h5>
+                <h4>REMINDERS</h4>
+                <p>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Kindly wear your face mask, face shield upon entering the RITM premises. RITM management reserves the right to refuse entry of personnel who will fail to comply.<br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall proceed at the Administrative Entrance Guard (In front of the Flagpoles) and present the hard copy of the approved access permit and negative RT-PCR Result/s 48 hours of all incoming contractor/s prior to the start of activity to the security guard.
+                  The Security Guard shall check all negative RT-PCR test and coordinate with the Administrative Office to validate the approved letter.<br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall undergo a temperature check before entering the building/access site.
+                  Rechecking of temperature shall be done to the contractor with temperature above 37.5 after fifteen (15) minutes. contractor with a temperature above 37.5 after rechecking shall be denied of entry.<br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall fully accomplish the Health Declaration and Contact Tracing Form and submit to the designated guard at the entrance of the building.<br>
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors with the symptoms for COVID-19 (such as cough, nasal congestion, runny nose, sore throat, muscle pains and aches and diarrhea-like symptoms) shall be denied entry.
+                </p>
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+            </div>
+
+            <div class="col-md-5 mb-5 text-center bg1">
+              <img src="assets/img/4786.png">
+            </div>
           </div>
           
         </div>
       </div>
     </section>
-
     <!-- End Other Services Section -->
 
 
