--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <!-- ======= Other Services Section ======= -->
     <section id="services" class="services" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
       <div class="container text-center">
-        <img src="assets/img/book.gif">
+        <img src="assets/img/notebook.gif">
         <h4>OTHER SERVICES</h4>
         <div class="spacer"></div>
       </div>
@@ -207,32 +207,83 @@
                   <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Mycobacteriology</b><br>
                   <img src="assets/img/fast-forward.gif" style="width: 20px;"> <b style="color:#27ae60;">Transfusion Transmissible Infections</b>
                 </p>
+                <hr>
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
             </div>
 
-            <div class="col-md-7 mb-5">
+            <div class="col-md-7 mb-5" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
               <div class="service-description">
                 <h5 class="mt-3">EXTERNAL VISITORS PROGRAM MONITORING</h5>
                 <h4>REMINDERS</h4>
-                <p>
-                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Kindly wear your face mask, face shield upon entering the RITM premises. RITM management reserves the right to refuse entry of personnel who will fail to comply.<br>
-                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall proceed at the Administrative Entrance Guard (In front of the Flagpoles) and present the hard copy of the approved access permit and negative RT-PCR Result/s 48 hours of all incoming contractor/s prior to the start of activity to the security guard.
-                  The Security Guard shall check all negative RT-PCR test and coordinate with the Administrative Office to validate the approved letter.<br>
-                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall undergo a temperature check before entering the building/access site.
-                  Rechecking of temperature shall be done to the contractor with temperature above 37.5 after fifteen (15) minutes. contractor with a temperature above 37.5 after rechecking shall be denied of entry.<br>
-                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors shall fully accomplish the Health Declaration and Contact Tracing Form and submit to the designated guard at the entrance of the building.<br>
-                  <img src="assets/img/fast-forward.gif" style="width: 20px;"> Contractors with the symptoms for COVID-19 (such as cough, nasal congestion, runny nose, sore throat, muscle pains and aches and diarrhea-like symptoms) shall be denied entry.
-                </p>
+                <div class="service-box">
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;">
+                  <p class="description">
+                    Kindly wear your face mask, face shield upon entering the RITM premises. RITM management reserves the right to refuse entry of personnel who will fail to comply.
+                  </p>
+                </div>
+                <div class="service-box">
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;">
+                  <p class="description">
+                    Contractors shall proceed at the Administrative Entrance Guard (In front of the Flagpoles) and present the hard copy of the approved access permit and negative RT-PCR Result/s 48 hours of all incoming contractor/s prior to the start of activity to the security guard.
+                    The Security Guard shall check all negative RT-PCR test and coordinate with the Administrative Office to validate the approved letter.
+                  </p>
+                </div>
+                <div class="service-box">
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;">
+                  <p class="description">
+                    Contractors shall undergo a temperature check before entering the building/access site.
+                    Rechecking of temperature shall be done to the contractor with temperature above 37.5 after fifteen (15) minutes. contractor with a temperature above 37.5 after rechecking shall be denied of entry.
+                  </p>
+                </div>
+                <div class="service-box">
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;">
+                  <p class="description">
+                    Contractors shall fully accomplish the Health Declaration and Contact Tracing Form and submit to the designated guard at the entrance of the building.
+                  </p>
+                </div>
+                <div class="service-box">
+                  <img src="assets/img/fast-forward.gif" style="width: 20px;">
+                  <p class="description">
+                    Contractors with the symptoms for COVID-19 (such as cough, nasal congestion, runny nose, sore throat, muscle pains and aches and diarrhea-like symptoms) shall be denied entry.
+                  </p>
+                </div>
+                <hr>
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
             </div>
-
-            <div class="col-md-5 mb-5 text-center bg1">
+            <div class="col-md-5 mb-5 text-center bg1" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
               <img src="assets/img/4786.png">
             </div>
+
+            <div class="col-md-5 bg" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+              <img src="assets/img/learning.png">
+            </div>
+            <div class="col-md-7 mb-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
+              <div class="service-description">
+                <h5 class="mt-3">LEARNING AND DEVELOPMENT INFORMATION SYSTEM</h5>
+                <h4>WHAT DO WE OFFER?</h4>
+              
+                <div class="service-offer mb-5">
+                  <img src="assets/img/computer.gif">
+                  <h5>Check Trainings Online</h5>
+                  <p>You can now check the list of trainings offered by the Research Institute for Tropical Medicine and read full training course briefer.</p>
+                </div>
+                <div class="service-offer mb-5">
+                  <img src="assets/img/book.gif">
+                  <h5>Online Training Application</h5>
+                  <p>No need to go to RITM to apply for a training. You can now apply on a training online. Have access to the list of RITM trainings by creating an account now!</p>
+                </div>
+                <div class="service-offer mb-5">
+                  <img src="assets/img/notebook.gif">
+                  <h5>Application Monitoring</h5>
+                  <p>Hassle free monitoring of your training application. You can now check the status of your application anytime, anywhere.</p>
+                </div>
+                <hr>
+                <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
+              </div>
+            </div>
           </div>
-          
         </div>
       </div>
     </section>
