--- a/index.html
+++ b/index.html
@@ -323,6 +323,25 @@
     
   </main><!-- End #main -->
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" displayed="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <button type="button" class="btn btn-primary btn-lg">FILIPINO</button>
+        <button type="button" class="btn btn-primary btn-lg">ENGLISH</button>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div> -->
+    </div>
+  </div>
+</div>
+
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container py-4">
@@ -338,6 +357,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/dist/wow.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -346,6 +366,13 @@
   <script>
     new WOW().init();
     AOS.init();
+
+    $(window).scroll(function() {
+       if ($(document).scrollTop() == 1100 && $("#exampleModal").attr("displayed") === "false") {
+         $('#exampleModal').modal('show');
+         $("#exampleModal").attr("exampleModal", "true");
+       }
+     });
   </script>
 
 </body>
