--- a/index.html
+++ b/index.html
@@ -309,7 +309,6 @@
                 <hr>
                 <a href="#" title="GET STARTED">GET STARTED <i class="bi bi-chevron-double-right"></i></a>
               </div>
-              
             </div>
 
             <div class="col-md-5 mb-5 text-center bg1" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
@@ -367,12 +366,12 @@
     new WOW().init();
     AOS.init();
 
-    $(window).scroll(function() {
-       if ($(document).scrollTop() == 1100 && $("#exampleModal").attr("displayed") === "false") {
-         $('#exampleModal').modal('show');
-         $("#exampleModal").attr("exampleModal", "true");
-       }
-     });
+    // $(window).scroll(function() {
+    //    if ($(document).scrollTop() == 1100 && $("#exampleModal").attr("displayed") === "false") {
+    //      $('#exampleModal').modal('show');
+    //      $("#exampleModal").attr("exampleModal", "true");
+    //    }
+    //  });
   </script>
 
 </body>
