--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </div>
 
             <div class="col-md-5 mb-5 bg" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
-              <img src="assets/img/learning.png">
+              <img src="assets/img/LDIS.png">
             </div>
             <div class="col-md-7 mb-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
               <div class="service-description">
@@ -289,8 +289,8 @@
                 <h5 class="mt-3">RITM VENDOR REGISTRATION ePORTAL</h5>
                 <p>
                   It is mandatory to be registered as a supplier to do business with the Institute. As a registered supplier you shall be contacted for new Request For Quotations
-                   (RFQs) if your registered capabilities match the requirements of the RFQ. In addition you shall get access to update your requirements and credentials using the 
-                   portal.
+                  (RFQs) if your registered capabilities match the requirements of the RFQ. In addition you shall get access to update your requirements and credentials using the 
+                  portal.
                 </p>
                 <p>
                   When you have completed the registration process, RITM Procurement Department shall take the necessary steps to review your credentials. Only after this review 
@@ -312,7 +312,7 @@
             </div>
 
             <div class="col-md-5 mb-5 text-center bg1" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="500">
-              <img src="assets/img/vendor.png">
+              <img src="assets/img/vendor1.png">
             </div>
           </div>
         </div>
@@ -349,7 +349,8 @@
         </div>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
