--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-circle"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
