--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <div class="content">
-              <h3>Why Choose RITM?</h3>
+              <h3>About RITM</h3>
               <p>
-                RITM strongly believes that the goal to control and eliminate infectious and tropical diseases requires the efforts of the whole nation. 
-                Empowerment of more individuals brings us closer to this goal.
+                The Research Institute for Tropical Medicine (RITM) had its humble beginnings soon after the culmination of over a decade of negotiations between the governments of the 
+                Philippines and Japan for the establishment of a tropical medicine research center. RITM was tasked to plan and implement research programs 
+                for infectious and tropical diseases.
               </p>
               <p>
                 <span class="bi bi-chevron-double-right"></span> <b>VISION</b><br>
