--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <!-- <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="assets/css/libs/animate.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="assets/css/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
@@ -61,6 +60,7 @@
           <div class="col-lg-4 d-flex align-items-stretch mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
             <div class="content">
               <h3>About RITM</h3>
+              <div class="spacer"></div>
               <p>
                 The Research Institute for Tropical Medicine (RITM) had its humble beginnings soon after the culmination of over a decade of negotiations between the governments of the 
                 Philippines and Japan for the establishment of a tropical medicine research center. RITM was tasked to plan and implement research programs 
@@ -68,7 +68,7 @@
               </p>
               <p>
                 <span class="bi bi-chevron-double-right"></span> <b>VISION</b><br>
-                <small>Locally and internationally recognized leading institution for research, training, clinical and diagnostic services, and biologicals production in infectious disease by 2022.</small>
+                <small>Locally and internationally recognized leading institution for research, training, clinical and diagnostic services, and biologicals production in infectious disease by 2022.</small><br>
 
                 <span class="bi bi-chevron-double-right"></span> <b>MISSION</b><br>
                 <small>Protect Filipinos against infectious diseases through the conduct of globally competitive research, training, clinical and diagnostic services and production of biologicals.</small>
@@ -258,7 +258,7 @@
             </div>
 
             <div class="col-md-5 mb-5 bg" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
-              <img src="assets/img/LDIS.png">
+              <img src="assets/img/learning_development.png">
             </div>
             <div class="col-md-7 mb-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="500">
               <div class="service-description">
@@ -333,10 +333,6 @@
         <button type="button" class="btn btn-primary btn-lg">FILIPINO</button>
         <button type="button" class="btn btn-primary btn-lg">ENGLISH</button>
       </div>
-      <!-- <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div> -->
     </div>
   </div>
 </div>
@@ -357,10 +353,10 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-circle"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="assets/js/jquery-3.6.0.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/dist/wow.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="assets/js/aos.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
