--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             <div class="content">
               <h3>About RITM</h3>
               <div class="spacer"></div>
-              <p>
+              <!-- <p>
                 The Research Institute for Tropical Medicine (RITM) had its humble beginnings soon after the culmination of over a decade of negotiations between the governments of the 
                 Philippines and Japan for the establishment of a tropical medicine research center. RITM was tasked to plan and implement research programs 
                 for infectious and tropical diseases.
-              </p>
+              </p> -->
               <p>
                 <span class="bi bi-chevron-double-right"></span> <b>VISION</b><br>
-                <small>Locally and internationally recognized leading institution for research, training, clinical and diagnostic services, and biologicals production in infectious disease by 2022.</small><br>
+                <small>Locally and internationally recognized leading institution for research, training, clinical and diagnostic services, and biologicals production in infectious disease by 2022.</small><br><br>
 
                 <span class="bi bi-chevron-double-right"></span> <b>MISSION</b><br>
                 <small>Protect Filipinos against infectious diseases through the conduct of globally competitive research, training, clinical and diagnostic services and production of biologicals.</small>
